RESOLVED FIXED100065
REGRESSION(r130643): ASSERTION FAILED: result.iterator != end() below PluginDatabase::add
https://bugs.webkit.org/show_bug.cgi?id=100065
Summary REGRESSION(r130643): ASSERTION FAILED: result.iterator != end() below PluginD...
Kangil Han
Reported 2012-10-22 20:04:57 PDT
fast/events/tabindex-focus-blur-all.html case has been crashed.
Attachments
Patch (2.14 KB, patch)
2012-10-23 18:26 PDT, Andreas Kling
no flags
Kangil Han
Comment 1 2012-10-22 20:06:10 PDT
STDERR: ASSERTION FAILED: result.iterator != end() STDERR: WebKit/Source/WTF/wtf/HashTable.h(894) : WTF::HashTable<Key, Value, Extractor, HashFunctions, Traits, KeyTraits>::AddResult WTF::HashTable<Key, Value, Extractor, HashFunctions, Traits, KeyTraits>::add(const T&, const Extra&) [with HashTranslator = WTF::IdentityHashTranslator<WebCore::PluginPackageHash>, T = WTF::RefPtr<WebCore::PluginPackage>, Extra = WTF::RefPtr<WebCore::PluginPackage>, Key = WTF::RefPtr<WebCore::PluginPackage>, Value = WTF::RefPtr<WebCore::PluginPackage>, Extractor = WTF::IdentityExtractor, HashFunctions = WebCore::PluginPackageHash, Traits = WTF::HashTraits<WTF::RefPtr<WebCore::PluginPackage> >, KeyTraits = WTF::HashTraits<WTF::RefPtr<WebCore::PluginPackage> >, WTF::HashTable<Key, Value, Extractor, HashFunctions, Traits, KeyTraits>::AddResult = WTF::HashTableAddResult<WTF::HashTableIterator<WTF::RefPtr<WebCore::PluginPackage>, WTF::RefPtr<WebCore::PluginPackage>, WTF::IdentityExtractor, WebCore::PluginPackageHash, WTF::HashTraits<WTF::RefPtr<WebCore::PluginPackage> >, WTF::HashTraits<WTF::RefPtr<WebCore::PluginPackage> > > >] STDERR: 1 0x7f27080ccb82 WTF::HashTableAddResult<WTF::HashTableIterator<WTF::RefPtr<WebCore::PluginPackage>, WTF::RefPtr<WebCore::PluginPackage>, WTF::IdentityExtractor, WebCore::PluginPackageHash, WTF::HashTraits<WTF::RefPtr<WebCore::PluginPackage> >, WTF::HashTraits<WTF::RefPtr<WebCore::PluginPackage> > > > WTF::HashTable<WTF::RefPtr<WebCore::PluginPackage>, WTF::RefPtr<WebCore::PluginPackage>, WTF::IdentityExtractor, WebCore::PluginPackageHash, WTF::HashTraits<WTF::RefPtr<WebCore::PluginPackage> >, WTF::HashTraits<WTF::RefPtr<WebCore::PluginPackage> > >::add<WTF::IdentityHashTranslator<WebCore::PluginPackageHash>, WTF::RefPtr<WebCore::PluginPackage>, WTF::RefPtr<WebCore::PluginPackage> >(WTF::RefPtr<WebCore::PluginPackage> const&, WTF::RefPtr<WebCore::PluginPackage> const&) STDERR: 2 0x7f27080ca7b5 WTF::HashTable<WTF::RefPtr<WebCore::PluginPackage>, WTF::RefPtr<WebCore::PluginPackage>, WTF::IdentityExtractor, WebCore::PluginPackageHash, WTF::HashTraits<WTF::RefPtr<WebCore::PluginPackage> >, WTF::HashTraits<WTF::RefPtr<WebCore::PluginPackage> > >::add(WTF::RefPtr<WebCore::PluginPackage> const&) STDERR: 3 0x7f27080c881f WTF::HashSet<WTF::RefPtr<WebCore::PluginPackage>, WebCore::PluginPackageHash, WTF::HashTraits<WTF::RefPtr<WebCore::PluginPackage> > >::add(WTF::RefPtr<WebCore::PluginPackage> const&) STDERR: 4 0x7f27080c70ba WebCore::PluginDatabase::add(WTF::PassRefPtr<WebCore::PluginPackage>) STDERR: 5 0x7f27080c6305 WebCore::PluginDatabase::refresh() STDERR: 6 0x7f27080c5e7b WebCore::PluginDatabase::installedPlugins(bool) STDERR: 7 0x7f27080d4b16 WebCore::PluginView::create(WebCore::Frame*, WebCore::IntSize const&, WebCore::HTMLPlugInElement*, WebCore::KURL const&, WTF::Vector<WTF::String, 0ul> const&, WTF::Vector<WTF::String, 0ul> const&, WTF::String const&, bool) STDERR: 8 0x7f270b31938e STDERR: 9 0x7f270b356798 STDERR: 10 0x7f270b2fd864 STDERR: 11 0x7f2707573a3f WebCore::SubframeLoader::loadPlugin(WebCore::HTMLPlugInImageElement*, WebCore::KURL const&, WTF::String const&, WTF::Vector<WTF::String, 0ul> const&, WTF::Vector<WTF::String, 0ul> const&, bool) STDERR: 12 0x7f2707572434 WebCore::SubframeLoader::requestPlugin(WebCore::HTMLPlugInImageElement*, WebCore::KURL const&, WTF::String const&, WTF::Vector<WTF::String, 0ul> const&, WTF::Vector<WTF::String, 0ul> const&, bool) STDERR: 13 0x7f2707572961 WebCore::SubframeLoader::requestObject(WebCore::HTMLPlugInImageElement*, WTF::String const&, WTF::AtomicString const&, WTF::String const&, WTF::Vector<WTF::String, 0ul> const&, WTF::Vector<WTF::String, 0ul> const&) STDERR: 14 0x7f270735c45b WebCore::HTMLObjectElement::updateWidget(WebCore::PluginCreationOption) STDERR: 15 0x7f2707363e05 WebCore::HTMLPlugInImageElement::updateWidgetIfNecessary() STDERR: 16 0x7f27073640c7 WebCore::HTMLPlugInImageElement::updateWidgetCallback(WebCore::Node*, unsigned int) STDERR: 17 0x7f27070dc46b WebCore::ContainerNode::dispatchPostAttachCallbacks() STDERR: 18 0x7f27070dc2c1 WebCore::ContainerNode::resumePostAttachCallbacks() STDERR: 19 0x7f2707363cb0 WebCore::HTMLPlugInImageElement::attach() STDERR: 20 0x7f27073b5b90 STDERR: 21 0x7f27073b5dd5 WebCore::HTMLConstructionSite::executeQueuedTasks() STDERR: 22 0x7f27073da9d3 WebCore::HTMLTreeBuilder::constructTreeFromAtomicToken(WebCore::AtomicHTMLToken*) STDERR: 23 0x7f27073da7f5 WebCore::HTMLTreeBuilder::constructTreeFromToken(WebCore::HTMLToken&) STDERR: 24 0x7f27073bb6fb WebCore::HTMLDocumentParser::pumpTokenizer(WebCore::HTMLDocumentParser::SynchronousMode) STDERR: 25 0x7f27073bb14c WebCore::HTMLDocumentParser::pumpTokenizerIfPossible(WebCore::HTMLDocumentParser::SynchronousMode) STDERR: 26 0x7f27073bbcf6 WebCore::HTMLDocumentParser::append(WebCore::SegmentedString const&) STDERR: 27 0x7f27070e6962 WebCore::DecodedDataDocumentParser::appendBytes(WebCore::DocumentWriter*, char const*, unsigned long) STDERR: 28 0x7f2707533d0c WebCore::DocumentWriter::addData(char const*, unsigned long) STDERR: 29 0x7f270752103c WebCore::DocumentLoader::commitData(char const*, unsigned long) STDERR: 30 0x7f270b2fc4f9 STDERR: 31 0x7f2707520e68 WebCore::DocumentLoader::commitLoad(char const*, int)
Andreas Kling
Comment 2 2012-10-23 18:26:16 PDT
WebKit Review Bot
Comment 3 2012-10-23 21:34:00 PDT
Comment on attachment 170282 [details] Patch Clearing flags on attachment: 170282 Committed r132302: <http://trac.webkit.org/changeset/132302>
WebKit Review Bot
Comment 4 2012-10-23 21:34:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.