REGRESSION(r130643): ASSERTION FAILED: result.iterator != end() below PluginDatabase::add <http://webkit.org/b/100065>

Reviewed by Anders Carlsson.

Restore the pre-r130643 hash table size for PluginDatabase to prevent these easily reproducible
collisions. This will need a proper fix at some point.

* plugins/PluginDatabase.h:
* plugins/PluginPackage.h:
(PluginPackageHashTraits):


Canonical link: https://commits.webkit.org/118217@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132302 268f45cc-cd09-0410-ab3c-d52691b4dbfc